# scopesim-targets

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bump_on_dependency.yml  publish_pypi.yml  replaceholder.yml  tests.yml
data/stellar/: stellar_parameters.ecsv
docs/: conf.py  defining_brightness.md  defining_positions.md  defining_spectra.md  index.md  yaml_syntax.md
docs/example_yamls/exoplanetary/: disk0.yaml  planets0.yaml  planets1.yaml
docs/example_yamls/extragalactic/: sersic0.yaml
docs/example_yamls/stellar/: binary0.yaml  binary1.yaml  binary2.yaml  imf_cluster.yaml  star0.yaml  star1.yaml  star2.yaml  star_field0.yaml  star_field1.yaml  star_field2.yaml
scopesim_targets/: __init__.py  cluster.py  data_utils.py  extended_source.py  plot_utils.py  point_source.py  spectral_classes.py  target.py  typing_utils.py  yaml_constructors.py
scopesim_targets/_static/: registry.txt
scopesim_targets/stellar/: __init__.py  imf.py  morphology.py  populations.py
tests/: conftest.py  test_cluster.py  test_example_yamls.py  test_point_source.py  test_spectral_classes.py  test_target.py  test_yaml.py
