[project]
name = "scopesim-targets"
version = "0.1.2a0"
description = "Definition of on-sky targets for the ScopeSim telescope observation simulator."
authors = [
    {name = "Fabian Haberhauer",email = "fabian.haberhauer@univie.ac.at"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy (>=1.26.4,<2.3.0) ; python_version >= '3.10' and python_version < '3.13'",
    "numpy (>=2.2.6,<3.0.0) ; python_version >= '3.13'",
    # SciPy is only an indirect dependency through synphot, but has limited
    # wheels for Python versions, so needs to be specified explicitly.
    "scipy (>=1.15.3,<1.16.0) ; python_version >= '3.10' and python_version < '3.11'",
    "scipy (>=1.17.0,<1.18.0) ; python_version >= '3.11'",

    "astropy (>=6.1.7,<8.0.0)",
    "matplotlib (>=3.10.1,<3.11.0)",
    "pyyaml (>=6.0.3,<7.0.0)",

    "synphot (>=1.6.1,<2.0.0)",
    "astar-utils (>=0.5.0)",
    "spextra (>=0.42.0)",
]

[project.optional-dependencies]
scopesim = ["scopesim (>=0.11.0,<1.0.0)"]


[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
black = "^25.12.0"
mypy = "^1.19.1"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-book-theme = "^1.1.4"
sphinx-copybutton = ">=0.5.2,<1.0"
sphinxcontrib-apidoc = ">=0.6.0,<1.0"
sphinxcontrib-mermaid = "^2.0"
myst-nb = "^1.3.0"
sphinx-issues = "^5.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
omit = ["tests/*", "docs/*"]
