[project]
name = "scopesim-targets"
version = "0.2.0a5"
description = "Definition of on-sky targets for the ScopeSim telescope observation simulator."
authors = [
    {name = "Fabian Haberhauer",email = "fabian.haberhauer@univie.ac.at"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "numpy (>=1.26.4,<2.3.0) ; python_version >= '3.11' and python_version < '3.13'",
    "numpy (>=2.3.5,<3.0.0) ; python_version >= '3.13'",
    # SciPy is only an indirect dependency through synphot, but has limited
    # wheels for Python versions, so needs to be specified explicitly.
    "scipy (>=1.17.0,<1.18.0)",

    "astropy (>=7.0.2,<8.0.0)",
    "matplotlib (>=3.10.1,<3.11.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pooch (>=1.9.0,<2.0.0)",

    "synphot (>=1.7.0,<2.0.0)",
    "astar-utils (>=0.5.2)",
    "spextra (>=0.43.5)",
]

[project.optional-dependencies]
scopesim = ["scopesim (>=0.11.2,<1.0.0)"]


[tool.poetry.group.dev.dependencies]
pylint = "^4.0.5"
black = "^26.3.1"
mypy = "^1.19.1"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^9.0.4"
sphinx-book-theme = "^1.1.4"
sphinx-copybutton = ">=0.5.2,<1.0"
sphinxcontrib-apidoc = ">=0.6.0,<1.0"
sphinxcontrib-mermaid = "^2.0"
myst-nb = "^1.3.0"
sphinx-issues = "^5.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
]
filterwarnings = [
    "error",
    # Should fix at some point
    "ignore::ResourceWarning",
    # From synphot (and spextra by extension) from the template spectra, not sure what to do there
    # Also, couldn't get it to match the exact message for some reason...
    "default::astropy.utils.exceptions.AstropyUserWarning",
    # From SpeXtra, fix there FFS
    "default:The 'name plus file extension' property:FutureWarning",
]

[tool.coverage.report]
omit = [
    "tests/*",
    "docs/*",
    "scopesim_targets/stellar/*",  # TODO: Remove this once we have enough tests there!
]
